Bug 134724 nsIOService::~nsIOService => nsIOService::SetOffline Getting service @mozilla.org/observer-service;1 on shutdown. [@nsThreadPool::Shutdown] r=dougt sr=darin