netwerk/base/src/nsIOService.cpp
@@ -232,6 +232,7 @@ nsIOService::Init()
     if (observerService) {
         observerService->AddObserver(this, kProfileChangeNetTeardownTopic, PR_TRUE);
         observerService->AddObserver(this, kProfileChangeNetRestoreTopic, PR_TRUE);
+        observerService->AddObserver(this, NS_XPCOM_SHUTDOWN_OBSERVER_ID, PR_TRUE);
     }
     
     return NS_OK;
@@ -247,9 +248,6 @@ nsIOService::~nsIOService()
         temp = NS_STATIC_CAST(nsISupports*, mURLParsers[i]);
         NS_IF_RELEASE(temp);
     }
-    (void)SetOffline(PR_TRUE);
-    if (mFileTransportService)
-        (void)mFileTransportService->Shutdown();
 }   
 
 NS_METHOD
@@ -498,7 +496,7 @@ nsIOService::GetParserForScheme(const char *scheme, nsIURLParser **_retval)
         rv = entry->GetData(getter_Copies(entryString));
         if (NS_FAILED(rv)) break;
 
-        if (nsCRT::strcmp(entryString, scheme) == 0) {
+        if (strcmp(entryString, scheme) == 0) {
             nsXPIDLCString contractID;
             rv = catmgr->GetCategoryEntry(NS_IURLPARSER_KEY,(const char *)entryString, getter_Copies(contractID));
             if (NS_FAILED(rv)) break;
@@ -759,7 +757,7 @@ nsIOService::NewChannelFromURI(nsIURI *aURI, nsIChannel **result)
 
     nsCOMPtr<nsIProtocolHandler> handler;
 
-    if (pi && !nsCRT::strcmp(pi->Type(),"http")) {
+    if (pi && !strcmp(pi->Type(),"http")) {
         // we are going to proxy this channel using an http proxy
         rv = GetProtocolHandler("http", getter_AddRefs(handler));
         if (NS_FAILED(rv)) return rv;
@@ -1009,22 +1007,27 @@ nsIOService::Observe(nsISupports *subject,
                      const char *topic,
                      const PRUnichar *data)
 {
-    if (!nsCRT::strcmp(topic, NS_PREFBRANCH_PREFCHANGE_TOPIC_ID)) {
+    if (!strcmp(topic, NS_PREFBRANCH_PREFCHANGE_TOPIC_ID)) {
         nsCOMPtr<nsIPrefBranch> prefBranch = do_QueryInterface(subject);
         if (prefBranch)
             PrefsChanged(prefBranch, NS_ConvertUCS2toUTF8(data).get());
     }
-    else if (!nsCRT::strcmp(topic, kProfileChangeNetTeardownTopic)) {
+    else if (!strcmp(topic, kProfileChangeNetTeardownTopic)) {
         if (!mOffline) {
             SetOffline(PR_TRUE);
             mOfflineForProfileChange = PR_TRUE;
         }
     }
-    else if (!nsCRT::strcmp(topic, kProfileChangeNetRestoreTopic)) {
+    else if (!strcmp(topic, kProfileChangeNetRestoreTopic)) {
         if (mOfflineForProfileChange) {
             SetOffline(PR_FALSE);
             mOfflineForProfileChange = PR_FALSE;
         }    
+    }
+    else if (!strcmp(topic, NS_XPCOM_SHUTDOWN_OBSERVER_ID)) {
+        (void)SetOffline(PR_TRUE);
+        if (mFileTransportService)
+            (void)mFileTransportService->Shutdown();
     }
     return NS_OK;
 }
